saving assigned players. transition to first night
